--- a/index.html
+++ b/index.html
@@ -44,15 +44,14 @@
                         <span class="text-primary">Stevens</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        1234 Fake Street · Provo, UT 84602 · (123) 345-6789 ·
+                        <a href="mailto:test@email.com">test@email.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">I am experienced in fraud analysis/investigation, and web development.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/taylorjstevens/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/Tjstevens19"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/tdogstrike/"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
