--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Taylor Stevens</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Professional_Portrait.JPG" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -47,7 +47,7 @@
                         1234 Fake Street · Provo, UT 84602 · (123) 345-6789 ·
                         <a href="mailto:test@email.com">test@email.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in fraud analysis/investigation, and web development.</p>
+                    <p class="lead mb-5">I am experienced in fraud analysis/investigation, training, leadership, and web development.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/taylorjstevens/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Tjstevens19"><i class="fab fa-github"></i></a>
@@ -64,15 +64,15 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Fraud Agent</h3>
                             <div class="subheading mb-3">Progressive Leasing</div>
-                            <p>Bring to the table win-win fraud mitigation and training strategies to ensure proactive domination of bad guys. Reviewed and developed strategies and actions to take resulting in hundreds of thousands of dollars of fraud mitigation. Worked together with other leadership to develop and carry out training plans and methods for 15 different agents.</p>
+                            <p>Pioneered the position as the first Senior Fraud Agent in the company and worked with management to determine what the position would look like for others moving forward. Bring to the table win-win fraud mitigation strategies to ensure proactive domination of bad guys. Reviewed and developed strategies and actions to take resulting in hundreds of thousands of dollars saved through fraud mitigation. Labored together with other leadership to develop and carry out training plans and methods for 15 different agents. Created and implemented process improvements resulting in hours of saved time with daily tasks. Demonstrated charisma and resolve in de-escalating and providing best-case scenario solutions for customers escalated by peers.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Fraud Agent</h3>
                             <div class="subheading mb-3">Progressive Leasing</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <p>Capitalize on opportunities to identify fraud patterns and individuals leading to tens of thousands of dollars saved from fraud attempts. Daily reviewed store portfolios and performance to identify fraud and escalate fraud issues. Spoke with potential consumers to determine risk level and took appropriate action when a high-risk consumer was identified. Participated in the development and growth of the team leading to eventual pioneering of new positions and processes which became mainstream.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2020 - December 2021</span></div>
                     </div>
@@ -80,7 +80,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Merchant Support Representative</h3>
                             <div class="subheading mb-3">Progressive Leasing</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <p>Spoke with and supported thousands of merchants across the nation with precise troubleshooting and explanation. Demonstrated resolve and intiative in mastering processes and becoming an expert in policy and procedure for the department which lead to receiving permission to lead calibrations for my team. De-escalated frustrated and desparate merchant representatives and customers resulting in continual returning to the company for future use of the products offered.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2019 - September 2020</span></div>
                     </div>
@@ -88,7 +88,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Customer Service Representative</h3>
                             <div class="subheading mb-3">Progressive Leasing</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <p>Served and supported customers with exactness in expectations leading to many returning customers and multiple instances of recognition. Achieved higher-than average Net Promoter and Quality Assurance scores on a regular basis. Achieved outstanding KPIs which resulted in an earlier-than-typical promotion</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2019 - November 2019</span></div>
                     </div>
