--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item">Python</li>
-                        <li class="list-inline-item">Django</li>
+                        <li class="list-inline-item">Python,</li>
+                        <li class="list-inline-item">Django,</li>
+                        <li class="list-inline-item">PostgreSQL,</li>
                         <li class="list-inline-item">VBA in Excel</li>
                     </ul>
                     <div class="subheading mb-3">Other Skills</div>
@@ -162,6 +163,10 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Excel Solver, Pivot Tables, and Charts
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Fraud Investigation
+                        </li>
                     </ul>
                 </div>
             </section>
@@ -182,41 +187,47 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
+                            Leading with kindness and strength - LinkedIn Learning Certificate
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
+                            Communicating with Charisma and Empathy - LinkedIn Learning Certificate
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            Digital Body Language - LinkedIn Learning Certificate
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
+                            Influencing Others - LinkedIn Learning Certificate
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
+                            Interpersonal Communication - LinkedIn Learning Certificate
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
+                            Giving and Receiving Feedback - LinkedIn Learning Certificate
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
+                            Building Trust - LinkedIn Learning Certificate
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <i>Peak of Excellence</i> Award - Progressive Leasing - Peer-nominated award for standing out and going above and beyond expectations (only a small number of people out of hundreds of employees receive this award per quarter)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <i>Alpinist</i> Award - Progressive Leasing - Leadership-chosen award for demonstrating a company value
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <i>Trailblazer</i> Award (Multiple times) - Progressive Leasing - For leading the team in stats
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <i>Elite</i> Award (Multiple times) - Progressive Leasing - For achieving perfect Quality Assurance scores in a month
                         </li>
                     </ul>
                 </div>
