--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2019 - December 2022</span></div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Westlake High School</h3>
+                            <p>GPA: 3.8</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2012 - 2016</span></div>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -177,6 +184,7 @@
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being a student, father, and husband, I enjoy most of my time playing board or video games and watching movies/shows with my wife. I love snow and cold areas. During the warmer months here in Utah, I enjoy hiking, swimming, and going for scenic drives.</p>
                     <p class="mb-0">I follow a number of sci-fi and fantasy genre movies, television shows, and books, especially ones produced and created by Disney. I spend a large amount of my free time exploring the latest technology advancements in the world and exploring the lore of well-crafted stories and worlds.</p>
+                    <p class="mb-0">Someday I would love to dip my toes in Project Management and eventually end up as a "people leader" in an industry-leading FinTech company as a Director of Technology or Data Science and Analytics.
                 </div>
             </section>
             <hr class="m-0" />
