--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            <i>Alpinist</i> Award - Progressive Leasing - Leadership-chosen award for demonstrating a company value
+                            <i>Alpinist</i> Award - Progressive Leasing - Leadership-chosen award for exemplifying a company value
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
