--- a/TotK-Zelda.html
+++ b/TotK-Zelda.html
@@ -7,7 +7,7 @@
     <title>Tears of the Kingdom</title>
 </head>
 <body id="top">
-<nav><a href="/index.html">Back to Professional-Looking Page</a></nav>
+<nav><a href="/IS201-FinalProject/index.html">Back to Professional-Looking Page</a></nav>
     <!-- Interactive Map Tableau Dashboard -->
     <div class='tableauPlaceholder' id='viz1681527851803' style='position: relative'>
         <noscript>
