--- a/TotK-Zelda.html
+++ b/TotK-Zelda.html
@@ -5,11 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tears of the Kingdom</title>
+    <!-- A stylesheet that I have created from scratch -->
+    <link rel="stylesheet" href="/mystyles.css">
 </head>
 <body id="top">
+   <!-- Navigation back to the professional-looking pages -->
 <nav><a href="/IS201-FinalProject/index.html">Back to Professional-Looking Page</a></nav>
-    <!-- Interactive Map Tableau Dashboard -->
-    <div class='tableauPlaceholder' id='viz1681527851803' style='position: relative'>
+<!-- An unordered list embedded in an ordered list -->
+<div><b>Things to look forward to:</b>
+    <ol>
+        <li>New Weapons & Armor
+            <ul>
+                <li>New Bows</li>
+                <li>New Swords</li>
+                <li>New Shields</li>
+                <li>Etc.</li>
+            </ul> 
+        </li>
+        <li>New Powers
+            <ul>
+                <li>Recall<br>
+                    <span><img src="img/Recall.jpg" alt="Demonstration of new Ascend ability" width="200px"></span></li>
+                <li>Fuse<br>
+                    <span><img src="img/Fuse.jpg" alt="Demonstration of new Ascend ability" width="200px"></span></li>
+                <li>Ultrahand<br>
+                    <span><img src="img/Ultrahand.png" alt="Demonstration of new Ascend ability" width="200px"></span></li>
+                <li>Ascend <br>
+                    <span><img src="img/Ascend.jpg" alt="Demonstration of new Ascend ability" width="200px"></span></li>
+            </ul>
+        </li>
+        <li>New Enemies
+            <ul>
+                <li>Ganondorf<br>
+                    <span><img src="img/Ganondorf.jpeg" alt="Demonstration of new Ascend ability" width="200px"></span></li>
+                <li>Demise??
+                    <br>
+                    <span><img src="img/Demise.jpg" alt="Demonstration of new Ascend ability" width="200px"></span>
+                </li>
+                <li>Three-headed Dragon<br>
+                    <span><img src="img/Three-Headed-Dragon.webp" alt="Demonstration of new Ascend ability" width="200px"></span></li>
+                <li>Many more...</li>
+            </ul>
+        </li>
+    </ol>
+</div>
+
+    <!-- A live and interactive embedded Tableau graph (not just a picture of one). -->
+    <label for="tableau-dash"><b>Here is an interactive map of the previous game if you didn't get a chance to explore it and its many collectable items:</b></label>
+    <div class='tableauPlaceholder' id='viz1681527851803' style='position: relative' id="tableau-dash">
         <noscript>
             <a href='#'>
             <img alt='Interactive Map ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ze&#47;ZeldaBreathoftheWildInteractiveMap_16815278997920&#47;InteractiveMap&#47;1_rss.png' style='border: none' />
