--- a/TotK-Zelda.html
+++ b/TotK-Zelda.html
@@ -25,25 +25,25 @@
         <li>New Powers
             <ul>
                 <li>Recall<br>
-                    <span><img src="img/Recall.jpg" alt="Demonstration of new Ascend ability" width="200px"></span></li>
+                    <span><img src="/IS201-FinalProject/img/Recall.jpg" alt="Demonstration of new Ascend ability" width="200px"></span></li>
                 <li>Fuse<br>
-                    <span><img src="img/Fuse.jpg" alt="Demonstration of new Ascend ability" width="200px"></span></li>
+                    <span><img src="/IS201-FinalProject/img/Fuse.jpg" alt="Demonstration of new Ascend ability" width="200px"></span></li>
                 <li>Ultrahand<br>
-                    <span><img src="img/Ultrahand.png" alt="Demonstration of new Ascend ability" width="200px"></span></li>
+                    <span><img src="/IS201-FinalProject/img/Ultrahand.png" alt="Demonstration of new Ascend ability" width="200px"></span></li>
                 <li>Ascend <br>
-                    <span><img src="img/Ascend.jpg" alt="Demonstration of new Ascend ability" width="200px"></span></li>
+                    <span><img src="/IS201-FinalProject/img/Ascend.jpg" alt="Demonstration of new Ascend ability" width="200px"></span></li>
             </ul>
         </li>
         <li>New Enemies
             <ul>
                 <li>Ganondorf<br>
-                    <span><img src="img/Ganondorf.jpeg" alt="Demonstration of new Ascend ability" width="200px"></span></li>
+                    <span><img src="/IS201-FinalProject/img/Ganondorf.jpeg" alt="Demonstration of new Ascend ability" width="200px"></span></li>
                 <li>Demise??
                     <br>
-                    <span><img src="img/Demise.jpg" alt="Demonstration of new Ascend ability" width="200px"></span>
+                    <span><img src="/IS201-FinalProject/img/Demise.jpg" alt="Demonstration of new Ascend ability" width="200px"></span>
                 </li>
                 <li>Three-headed Dragon<br>
-                    <span><img src="img/Three-Headed-Dragon.webp" alt="Demonstration of new Ascend ability" width="200px"></span></li>
+                    <span><img src="/IS201-FinalProject/img/Three-Headed-Dragon.webp" alt="Demonstration of new Ascend ability" width="200px"></span></li>
                 <li>Many more...</li>
             </ul>
         </li>
