--- a/TotK-Zelda.html
+++ b/TotK-Zelda.html
@@ -25,7 +25,7 @@
         <li>New Powers
             <ul>
                 <li>Recall<br>
-                    <span><img src="/IS201-FinalProject/img/Recall.jpg" alt="Demonstration of new Ascend ability" width="200px"></span></li>
+                    <span><img src="/img/Recall.jpg" alt="Demonstration of new Ascend ability" width="200px"></span></li>
                 <li>Fuse<br>
                     <span><img src="/IS201-FinalProject/img/Fuse.jpg" alt="Demonstration of new Ascend ability" width="200px"></span></li>
                 <li>Ultrahand<br>
