--- a/TotK-Zelda.html
+++ b/TotK-Zelda.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tears of the Kingdom</title>
     <!-- A stylesheet that I have created from scratch -->
-    <link rel="stylesheet" href="/mystyles.css">
+    <link rel="stylesheet" href="/IS201-FinalProject/css/mystyles.css">
 </head>
-<body id="top">
+<body id="top" class="homebg">
    <!-- Navigation back to the professional-looking pages -->
 <nav><a href="/IS201-FinalProject/index.html">Back to Professional-Looking Page</a></nav>
 <!-- An unordered list embedded in an ordered list -->
