--- a/TotK-Zelda.html
+++ b/TotK-Zelda.html
@@ -27,17 +27,26 @@
         </li>
         <li>New Powers
             <ul class="yellowfont">
-                <li>Recall <span><img src="/IS201-FinalProject/img/Recall.jpg" alt="Demonstration of new Recall ability" width="200px"></span></li>
-                <li>Fuse <span><img src="/IS201-FinalProject/img/Fuse.jpg" alt="Demonstration of new Fuse ability" width="200px"></span></li>
-                <li>Ultrahand <span><img src="/IS201-FinalProject/img/Ultrahand.png" alt="Demonstration of new Ultrahand ability" width="200px"></span></li>
-                <li>Ascend <span><img src="/IS201-FinalProject/img/Ascend.jpg" alt="Demonstration of new Ascend ability" width="200px"></span></li>
+                <li>Recall<br>
+                    <span><img src="/IS201-FinalProject/img/Recall.jpg" alt="Demonstration of new Recall ability" width="200px"></span></li>
+                <li>Fuse<br>
+                    <span><img src="/IS201-FinalProject/img/Fuse.jpg" alt="Demonstration of new Fuse ability" width="200px"></span></li>
+                <li>Ultrahand<br>
+                    <span><img src="/IS201-FinalProject/img/Ultrahand.png" alt="Demonstration of new Ultrahand ability" width="200px"></span></li>
+                <li>Ascend <br>
+                    <span><img src="/IS201-FinalProject/img/Ascend.jpg" alt="Demonstration of new Ascend ability" width="200px"></span></li>
             </ul>
         </li>
         <li>New Enemies
             <ul class="yellowfont">
-                <li>Ganondorf <span><img src="/IS201-FinalProject/img/Ganondorf.jpeg" alt="Photo of Ganondorf" width="200px"></span></li>
-                <li>Demise?? <span><img src="/IS201-FinalProject/img/Demise.jpg" alt="Photo of what most people think is Demise" width="200px"></span></li>
-                <li>Three-headed Dragon <span><img src="/IS201-FinalProject/img/Three-Headed-Dragon.webp" alt="Photo of three-headed-dragon" width="200px"></span></li>
+                <li>Ganondorf<br>
+                    <span><img src="/IS201-FinalProject/img/Ganondorf.jpeg" alt="Photo of Ganondorf" width="200px"></span></li>
+                <li>Demise??
+                    <br>
+                    <span><img src="/IS201-FinalProject/img/Demise.jpg" alt="Photo of what most people think is Demise" width="200px"></span>
+                </li>
+                <li>Three-headed Dragon<br>
+                    <span><img src="/IS201-FinalProject/img/Three-Headed-Dragon.webp" alt="Photo of three-headed-dragon" width="200px"></span></li>
                 <li>Many more...</li>
             </ul>
         </li>
