--- a/TotK-Zelda.html
+++ b/TotK-Zelda.html
@@ -20,6 +20,7 @@
     <h1 class="bluefont">The Legend of Zelda: Tears of the Kingdom</h1>
 </div>
 
+<div class="listposition">
 <!-- An unordered list embedded in an ordered list -->
 <b>Things to look forward to:</b>
     <ol>
